--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,11 @@ dependencies = []
 [project.scripts]
 purechance = "purechance._cli_entry:main"
 
+[project.optional-dependencies]
+cli = [
+    "typer>=0.20.1",
+]
+
 [build-system]
 requires = ["uv_build>=0.9.18,<0.10.0"]
 build-backend = "uv_build"
